tests/errors/byte_buffer_missing_use.ptt
spark {
  b is ByteBuffer
  yell(b.len())
}
